// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> Snapshots Avatar with a image 1`] = `
.c0 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<img
  alt="Avatar with image"
  className="c0 c1"
  loading="lazy"
  src="https://yandex.ru/images/search?text=foto&pos=3&img_url=https%3A%2F%2Fget.wallhere.com%2Fphoto%2F2700x1800-px-building-castle-forest-Hohenzollern-landscape-1077207.jpg&rpt=simage"
/>
`;

exports[`<Avatar /> Snapshots Avatar without a image 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
}

<img
  alt="Icon component"
  className="c0 c1"
  src="Person.svg"
/>
`;
